--- a/src/comp1110/ass2/gui/game.fxml
+++ b/src/comp1110/ass2/gui/game.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -21,7 +22,7 @@
          <menus>
             <Menu mnemonicParsing="false" text="File">
                <items>
-                  <MenuItem mnemonicParsing="false" onAction="#toWelcome" text="New Game" />
+                  <MenuItem mnemonicParsing="false" onAction="#toWelcome" text="Home" />
                   <MenuItem fx:id="quit" mnemonicParsing="false" onAction="#exitProgram" text="Quit" />
                </items>
             </Menu>
@@ -593,21 +594,14 @@
             </AnchorPane>
          </children>
       </GridPane>
-      <Button fx:id="go" layoutX="519.0" layoutY="662.0" mnemonicParsing="false" onAction="#makePlacement" text="GO" />
-      <TextField fx:id="placetext" layoutX="214.0" layoutY="662.0" prefHeight="27.0" prefWidth="295.0" />
-      <Text layoutX="142.0" layoutY="680.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Placement" />
-      <Button layoutX="570.0" layoutY="662.0" mnemonicParsing="false" onAction="#generateSetup" text="Generate" />
-      <Text layoutX="777.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 0">
+      <Button layoutX="435.0" layoutY="662.0" mnemonicParsing="false" onAction="#makePlacement" text="Use" />
+      <TextField fx:id="placetext" layoutX="131.0" layoutY="663.0" prefHeight="27.0" prefWidth="295.0" />
+      <Text layoutX="12.0" layoutY="680.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Custom Placement" />
+      <Button layoutX="558.0" layoutY="661.0" mnemonicParsing="false" onAction="#newGame" text="New Game">
          <font>
-            <Font size="19.0" />
-         </font>
-      </Text>
-      <Text layoutX="777.0" layoutY="626.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Text>
-      <GridPane fx:id="p0board" layoutX="703.0" layoutY="128.0" prefHeight="183.0" prefWidth="210.0">
+            <Font name="System Bold" size="13.0" />
+         </font></Button>
+      <GridPane fx:id="p0board" layoutX="699.0" layoutY="71.0" prefHeight="80.0" prefWidth="178.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -625,7 +619,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="p1board" layoutX="703.0" layoutY="411.0" prefHeight="175.0" prefWidth="201.0">
+      <GridPane fx:id="p1board" layoutX="699.0" layoutY="265.0" prefHeight="93.0" prefWidth="178.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -729,5 +723,123 @@
             </AnchorPane>
          </children>
       </GridPane>
+      <Text fx:id="p1text" layoutX="760.0" layoutY="246.0" stroke="WHITE" strokeType="OUTSIDE" text="Player 1" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Text>
+      <Text fx:id="p0text" layoutX="758.0" layoutY="51.0" stroke="WHITE" strokeType="OUTSIDE" text="Player 0" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Text>
+      <Line endX="100.0" layoutX="697.0" layoutY="358.0" rotate="-90.0" scaleX="3.0" scaleY="3.0" startX="-100.0" />
+      <Text fx:id="p2text" layoutX="758.0" layoutY="419.0" stroke="WHITE" strokeType="OUTSIDE" text="Player 2" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Text>
+      <GridPane fx:id="p2board" layoutX="706.0" layoutY="440.0" prefHeight="93.0" prefWidth="178.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="p0state" layoutX="699.0" layoutY="189.0" prefHeight="22.0" prefWidth="224.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Text fx:id="p3text" layoutX="759.0" layoutY="570.0" stroke="WHITE" strokeType="OUTSIDE" text="Player 3" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Text>
+      <GridPane fx:id="p3board" layoutX="718.0" layoutY="595.0" prefHeight="93.0" prefWidth="178.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="p1state" layoutX="713.0" layoutY="362.0" prefHeight="22.0" prefWidth="224.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="p2state" layoutX="695.0" layoutY="523.0" prefHeight="22.0" prefWidth="224.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="p3state" layoutX="696.0" layoutY="679.0" prefHeight="22.0" prefWidth="224.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Text fx:id="startmsg" fill="RED" layoutX="461.0" layoutY="360.0" rotate="90.0" stroke="#7d27ff" strokeType="OUTSIDE" strokeWidth="0.5" text="PLEASE PRESS NEW GAME TO START">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
