--- a/src/comp1110/ass2/gui/gamebot.fxml
+++ b/src/comp1110/ass2/gui/gamebot.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!--Author: Danny-->
-
+<!--Author: Danny 100%-->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
