--- a/src/comp1110/ass2/gui/viewer.fxml
+++ b/src/comp1110/ass2/gui/viewer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--Author: Danny-->
+<!--Author: Danny 100%-->
+<!--The codes here is for Task 4-->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
